objects/RajIndustry__c.object
<CustomObject>
    <fields>
        <fullName>RajGSTNumber__c</fullName>
        <label>RajGSTNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RajIndustryArea__c</fullName>
        <label>RajIndustryArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RajIndustryType__c</fullName>
        <description>RajIndustryType</description>
        <label>RajIndustryType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>RajIndustry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RajIndustry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RajIndustries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>